--- a/index.html
+++ b/index.html
@@ -99,17 +99,30 @@
             font-size: 0.9rem;
             transition: opacity 0.3s ease;
             opacity: 0;
+            position: relative;
+        }
+        #json-container.loading::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 20px;
+            height: 20px;
+            border: 3px solid #ccc;
+            border-top: 3px solid var(--primary-color);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            transform: translate(-50%, -50%);
         }
         #json-container.loaded {
             opacity: 1;
         }
-        .json-item {
-            display: flex;
-            align-items: flex-start;
-            margin-bottom: 10px;
-            padding: 5px;
-            border-bottom: 1px solid #eee;
-        }
+.json-item {
+    display: block;  /* 改成块级布局 */
+    margin-bottom: 5px;
+    padding: 2px 5px;
+    border-bottom: 1px solid #eee;
+}
         .json-key {
             color: var(--key-color);
             font-weight: bold;
@@ -120,6 +133,7 @@
         .json-value {
             flex-grow: 1;
             word-break: break-word;
+            white-space: normal;
         }
         .json-string { color: var(--string-color); }
         .json-number { color: var(--number-color); }
@@ -135,6 +149,7 @@
             cursor: pointer;
             user-select: none;
             display: inline;
+            margin-left: 5px;
         }
         .json-collapsible::before {
             content: '▼';
@@ -143,9 +158,11 @@
         .json-collapsible.collapsed::before {
             content: '▶';
         }
-        .json-collapsible-content {
-            display: block;
-        }
+.json-collapsible-content {
+    display: block;
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+}
         .json-collapsible-content.collapsed {
             display: none;
         }
@@ -158,6 +175,12 @@
         .btn-primary:hover {
             background-color: #4f46e5;
             transform: scale(1.05);
+        }
+        .btn-primary:disabled {
+            background-color: #a3a3a3;
+            border-color: #a3a3a3;
+            cursor: not-allowed;
+            transform: none;
         }
         .accordion-button {
             font-weight: bold;
@@ -191,6 +214,10 @@
             max-width: 400px;
             margin-bottom: 20px;
         }
+        @keyframes spin {
+            0% { transform: translate(-50%, -50%) rotate(0deg); }
+            100% { transform: translate(-50%, -50%) rotate(360deg); }
+        }
         @media (max-width: 768px) {
             .sidebar {
                 max-height: none;
@@ -202,9 +229,6 @@
             }
             .json-key {
                 min-width: 80px;
-            }
-            .json-collapsible-content {
-                margin-left: 0;
             }
             #json-container {
                 font-size: 0.85rem;
@@ -368,7 +392,26 @@
                 return `<span class="json-string">&quot;${value}&quot;</span>`;
             }
             if (typeof value === 'object' && value !== null) {
-                return `<span class="json-collapsible" onclick="this.classList.toggle('collapsed'); this.nextElementSibling.classList.toggle('collapsed');">${Array.isArray(value) ? '[' : '{'}</span><div class="json-collapsible-content">${formatJson(value)}</div>`;
+                let content = '';
+                if (Array.isArray(value)) {
+                    if (value.length === 0) {
+                        content = '<div class="json-item"><span class="json-key"></span><span class="json-value">[ ]</span></div>';
+                    } else {
+                        content = value.map((item, index) => {
+                            return `<div class="json-item"><span class="json-key">${index}</span><span class="json-value">${formatValue(item)}</span></div>`;
+                        }).join('');
+                    }
+                } else {
+                    const entries = Object.entries(value);
+                    if (entries.length === 0) {
+                        content = '<div class="json-item"><span class="json-key"></span><span class="json-value">{ }</span></div>';
+                    } else {
+                        content = entries.map(([key, val]) => {
+                            return `<div class="json-item"><span class="json-key">&quot;${key}&quot;</span><span class="json-value">${formatValue(val)}</span></div>`;
+                        }).join('');
+                    }
+                }
+                return `<span class="json-collapsible" onclick="this.classList.toggle('collapsed'); this.nextElementSibling.classList.toggle('collapsed');">${Array.isArray(value) ? '[' : '{'}</span><div class="json-collapsible-content">${content}</div>`;
             }
             return value.toString();
         }
@@ -456,6 +499,9 @@
         // 函数：请求 API 数据
         async function fetchApiData(endpoint, params) {
             const jsonContainer = document.getElementById('json-container');
+            const fetchBtn = document.getElementById('fetch-btn');
+            jsonContainer.classList.add('loading');
+            fetchBtn.disabled = true; // 禁用按钮
             let url = `${baseUrl}${endpoint}`;
             if (params.length > 0) {
                 const queryString = params.map(p => `${p.name}=${encodeURIComponent(p.value)}`).join('&');
@@ -470,7 +516,9 @@
                 jsonContainer.innerHTML = `<div style="color: red;">Error: ${error.message}</div>`;
                 console.error('API 请求失败:', error);
             } finally {
+                jsonContainer.classList.remove('loading');
                 jsonContainer.classList.add('loaded');
+                fetchBtn.disabled = false; // 恢复按钮
             }
         }
 
