--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                     { title: 'Epic Games 免费游戏', endpoint: '/epic', params: [] },
                     { title: '公网 IP 地址', endpoint: '/ip', params: [] },
                     { title: '农历信息（开发中）', endpoint: '/lunar', params: [] },
-                    { title: '实时天气', endpoint: '/weather', params: [{name: 'location', example: '北京'}] },
-                    { title: '天气预报', endpoint: '/weather/forecast', params: [{name: 'location', example: '北京'}] },
+                    { title: '实时天气', endpoint: '/weather', params: [{name: 'query', example: '呼和浩特'}] },
+                    { title: '天气预报', endpoint: '/weather/forecast', params: [{name: '呼和浩特', example: '呼和浩特'}] },
                     { title: '生成二维码', endpoint: '/qrcode', params: [{name: 'text', example: 'https://example.com'}] },
                     { title: '百度百科词条', endpoint: '/baike', params: [{name: 'word', example: '人工智能'}] },
                     { title: '在线翻译', endpoint: '/fanyi', params: [{name: 'text', example: 'Hello'}, {name: 'from', example: 'en'}, {name: 'to', example: 'zh'}] },
