--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     { title: '天气预报', endpoint: '/weather/forecast', params: [{name: '呼和浩特', example: '呼和浩特'}] },
                     { title: '生成二维码', endpoint: '/qrcode', params: [{name: 'text', example: 'https://example.com'}] },
                     { title: '百度百科词条', endpoint: '/baike', params: [{name: 'word', example: '人工智能'}] },
-                    { title: '在线翻译', endpoint: '/fanyi', params: [{name: 'text', example: 'Hello'}, {name: 'from', example: 'en'}, {name: 'to', example: 'zh'}] },
+                    { title: '在线翻译', endpoint: '/fanyi', params: [{name: 'text', example: 'Hello'}, {name: 'from', example: 'en'}, {name: 'to', example: 'zh-CHS'}] },
                     { title: '在线翻译支持语言', endpoint: '/fanyi/langs', params: [] },
                     { title: '链接 OG 信息', endpoint: '/og', params: [{name: 'url', example: 'https://example.com'}] },
                     { title: '哈希/解压/压缩', endpoint: '/hash', params: [{name: 'type', example: 'md5'}, {name: 'text', example: 'hello'}] },
