--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div class="mb-3">
                     <label for="baseUrlSelect" class="form-label">选择 API 域名：</label>
                     <select id="baseUrlSelect" class="form-select domain-select">
-                        <option value="60s.2207117672.workers.dev" selected>个人部署</option>
+                        <option value="60s.2207117672.workers.dev/v2" selected>个人部署</option>
                         <option value="https://60s.viki.moe/v2">官方主域名: https://60s.viki.moe</option>
                         <option value="https://60s.b23.run/v2">备用1: https://60s.b23.run</option>
                         <option value="https://60s-cf.viki.moe/v2">备用2: https://60s-cf.viki.moe</option>
