--- a/index.html
+++ b/index.html
@@ -24,42 +24,40 @@
             color: var(--text-color);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            padding-top: 10px;
+            padding-top: 20px;
         }
         .container-fluid {
             max-width: 1400px;
             margin: 0 auto;
-            padding-left: 10px;
-            padding-right: 10px;
         }
         .sidebar {
-            min-height: auto;
-            max-height: none;
-            position: relative;
-            top: 0;
+            min-height: calc(100vh - 100px);
+            max-height: calc(100vh - 100px);
+            overflow-y: auto;
+            position: sticky;
+            top: 20px;
             background-color: var(--card-bg);
             border-right: 1px solid #dee2e6;
-            padding: 15px;
-            margin-bottom: 15px;
+            padding: 20px;
         }
         .content-area {
-            min-height: auto;
-            overflow-y: visible;
-            padding: 15px;
+            min-height: calc(100vh - 100px);
+            overflow-y: auto;
+            padding: 20px;
         }
         .card {
             background-color: var(--card-bg);
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             border-radius: var(--border-radius);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
         #json-container {
             background: var(--pre-bg);
-            padding: 12px;
+            padding: 15px;
             border-radius: var(--border-radius);
             height: auto;
             overflow-y: auto;
-            font-size: 0.85rem;
+            font-size: 0.9rem;
             transition: opacity 0.3s ease;
             opacity: 0;
             position: relative;
@@ -82,23 +80,21 @@
         }
         .json-item {
             display: block;
-            margin-bottom: 4px;
-            padding: 2px 4px;
+            margin-bottom: 5px;
+            padding: 2px 5px;
             border-bottom: 1px solid #eee;
         }
         .json-key {
             color: var(--key-color);
             font-weight: bold;
-            min-width: 90px;
-            margin-right: 8px;
+            min-width: 120px;
+            margin-right: 10px;
             flex-shrink: 0;
-            font-size: 0.85rem;
         }
         .json-value {
             flex-grow: 1;
             word-break: break-word;
             white-space: normal;
-            font-size: 0.85rem;
         }
         .json-string { color: var(--string-color); }
         .json-number { color: var(--number-color); }
@@ -106,7 +102,6 @@
         .json-link a {
             color: var(--key-color);
             text-decoration: underline;
-            font-size: 0.85rem;
         }
         .json-link a:hover {
             color: #1e40af;
@@ -115,13 +110,11 @@
             cursor: pointer;
             user-select: none;
             display: inline;
-            margin-left: 4px;
-            font-size: 0.85rem;
+            margin-left: 5px;
         }
         .json-collapsible::before {
             content: '▼';
-            margin-right: 4px;
-            font-size: 0.8rem;
+            margin-right: 5px;
         }
         .json-collapsible.collapsed::before {
             content: '▶';
@@ -139,8 +132,6 @@
             border-color: var(--primary-color);
             border-radius: 6px;
             transition: background-color 0.3s ease, transform 0.2s ease;
-            font-size: 0.9rem;
-            padding: 6px 12px;
         }
         .btn-primary:hover {
             background-color: #4f46e5;
@@ -155,8 +146,6 @@
         .accordion-button {
             font-weight: bold;
             color: var(--text-color);
-            font-size: 0.95rem;
-            padding: 12px 15px;
         }
         .accordion-button:not(.collapsed) {
             color: var(--primary-color);
@@ -164,8 +153,6 @@
         }
         .list-group-item-action {
             cursor: pointer;
-            padding: 10px 15px;
-            font-size: 0.9rem;
         }
         .list-group-item-action:hover {
             background-color: #e0e7ff;
@@ -179,116 +166,68 @@
             border-radius: 6px;
             border: 1px solid #d1d5db;
             transition: border-color 0.3s ease;
-            font-size: 0.9rem;
-            padding: 6px 10px;
         }
         .form-control:focus {
             border-color: var(--primary-color);
             box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.2);
         }
         .domain-select {
-            max-width: 100%;
-            margin-bottom: 15px;
+            max-width: 400px;
+            margin-bottom: 20px;
         }
         .success-tip {
             position: fixed;
-            top: 15px;
-            right: 15px;
+            top: 20px;
+            right: 20px;
             background-color: #10b981;
             color: white;
-            padding: 8px 12px;
+            padding: 10px 15px;
             border-radius: 6px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             z-index: 1050;
             opacity: 0;
             transform: translateY(-20px);
             transition: opacity 0.3s, transform 0.3s;
-            font-size: 0.9rem;
         }
         .success-tip.show {
             opacity: 1;
             transform: translateY(0);
         }
         .api-info {
-            font-size: 0.8rem;
+            font-size: 0.85rem;
             color: #6b7280;
-            margin-top: 8px;
-            padding: 6px;
+            margin-top: 10px;
+            padding: 8px;
             background-color: #f9fafb;
             border-radius: 4px;
             border-left: 3px solid var(--primary-color);
-            line-height: 1.4;
-        }
-        h5 {
-            font-size: 1.1rem;
-            margin-bottom: 15px;
-        }
-        h2 {
-            font-size: 1.4rem;
-            margin-bottom: 15px;
         }
         @keyframes spin {
             0% { transform: translate(-50%, -50%) rotate(0deg); }
             100% { transform: translate(-50%, -50%) rotate(360deg); }
         }
-        @media (min-width: 769px) {
-            .sidebar {
-                min-height: calc(100vh - 80px);
-                max-height: calc(100vh - 80px);
-                position: sticky;
-                top: 10px;
-                overflow-y: auto;
-            }
-            .content-area {
-                min-height: calc(100vh - 80px);
-                overflow-y: auto;
-            }
-        }
         @media (max-width: 768px) {
-            body {
-                padding-top: 5px;
-            }
-            .container-fluid {
-                padding-left: 5px;
-                padding-right: 5px;
-            }
             .sidebar {
-                padding: 10px;
-                margin-bottom: 10px;
+                max-height: none;
+                position: relative;
+                top: 0;
             }
             .content-area {
-                padding: 10px;
+                padding: 15px;
             }
             .json-key {
-                min-width: 70px;
-                font-size: 0.8rem;
-            }
-            .json-value {
-                font-size: 0.8rem;
+                min-width: 80px;
             }
             #json-container {
-                font-size: 0.8rem;
-                padding: 10px;
+                font-size: 0.85rem;
+            }
+            .domain-select {
+                max-width: 100%;
             }
             .success-tip {
                 top: 10px;
                 right: 10px;
                 left: 10px;
-                text-align: center;
-            }
-            .accordion-button {
-                font-size: 0.9rem;
-                padding: 10px 12px;
-            }
-            .list-group-item-action {
-                padding: 8px 12px;
-                font-size: 0.85rem;
-            }
-            h5 {
-                font-size: 1rem;
-            }
-            h2 {
-                font-size: 1.2rem;
             }
         }
     </style>
@@ -302,7 +241,8 @@
                 <div class="mb-3">
                     <label for="baseUrlSelect" class="form-label">选择 API 域名：</label>
                     <select id="baseUrlSelect" class="form-select domain-select">
-                        <option value="https://60s.viki.moe/v2" selected>主域名: https://60s.viki.moe</option>
+                        <option value="https://60s.2207117672.workers.dev/v2" selected>个人部署</option>
+                        <option value="https://60s.viki.moe/v2">官方主域名: https://60s.viki.moe</option>
                         <option value="https://60s.b23.run/v2">备用1: https://60s.b23.run</option>
                         <option value="https://60s-cf.viki.moe/v2">备用2: https://60s-cf.viki.moe</option>
                         <option value="https://60s.114128.xyz/v2">备用3: https://60s.114128.xyz</option>
@@ -313,7 +253,7 @@
             </div>
             <!-- 右侧内容区 -->
             <div class="col-md-9 content-area">
-                <h2 class="mb-3">API 响应数据</h2>
+                <h2 class="mb-4">API 响应数据</h2>
                 <div id="api-content" class="card p-3">
                     <h5 id="api-title" class="mb-3">请选择一个API</h5>
                     <div id="api-params" class="mb-3"></div>
@@ -505,7 +445,7 @@
                     } else {
                         content = entries.map(([key, val]) => {
                             return `<div class="json-item"><span class="json-key">&quot;${key}&quot;</span><span class="json-value">${formatValue(val)}</span></div>`;
-                        ).join('');
+                        }).join('');
                     }
                 }
                 return `<span class="json-collapsible" onclick="this.classList.toggle('collapsed'); this.nextElementSibling.classList.toggle('collapsed');">${Array.isArray(value) ? '[' : '{'}</span><div class="json-collapsible-content">${content}</div>`;
